--- a/pug/config/config.pug
+++ b/pug/config/config.pug
@@ -68,53 +68,52 @@
             ],
             img: `ejemploTotemSilueta.jpg`,
             },
-    //-     portico:
-    //-         {
-    //-             tittle: "PÓRTICO PEC 316",
-    //-             text: "Módulo Sanitizante - Uso Interior y Exterior",
-    //-             features: [
-    //-                 {name: "6 micro aspersores nebulizadores.",
-    //-                 icon: `iconList.png`},
-    //-                 {name: "Tanque integrado de 10 lt de capacidad. (equivalente a 100 accionamientos)",
-    //-                 icon: `iconList.png`},
-    //-                 {name: "Alfombra antideslizante y sanitizante",
-    //-                 icon: `iconList.png`},
-    //-                 {name: "Sensor de movimiento y activación automática",
-    //-                 icon: `iconList.png`},
-    //-                 {name: "Bomba periférica de alta calidad.",
-    //-                 icon: `iconList.png`},
-    //-                 {name: "Instalación eléctrica con llave termo magnética.",
-    //-                 icon: `iconList.png`},
-    //-                 {name: "Protocolo de acceso de 3 pasos.",
-    //-                 icon: `fas fa-circle`},
-    //-             ], 
-    //-             img: `ejemploPortico.jpg`,
-    //-         }
-    //-         ,
-    //-     cabina:{
-    //-         tittle: "CABINA PEC 318",
-    //-         text: "Módulo Sanitizante - Uso Interior y Exterior",
-    //-         features: [
-    //-             {name: "6 micro aspersores nebulizadores.",
-    //-             icon: `fas fa-circle`},
-    //-             {name: "Tanque integrado de 50 o 100lt de capacidad. (equivalente a 900 accionamientos)",
-    //-             icon: `fas fa-circle`},
-    //-             {name: "Alfombra antideslizante y sanitizante.",
-    //-             icon: `fas fa-circle`},
-    //-             {name: "Sensor de movimiento y activación automática.",
-    //-             icon: `fas fa-circle`},
-    //-             {name: "Bomba periférica de alta calidad.",
-    //-             icon: `fas fa-circle`},
-    //-             {name: "Instalación eléctrica con llave termo magnética.",
-    //-             icon: `fas fa-circle`},
-    //-             {name: "Indicadores de ingreso y egreso",
-    //-             icon: `fas fa-circle`},
-    //-             {name: "Iluminación Led interior",
-    //-             icon: `fas fa-circle`},
-    //-             {name: "Protocolo de acceso de 3 pasos",
-    //-             icon: `fas fa-circle`},
-    //-         ],
-    //-         img: `ejemploCabina.jpg`,
-    //-         }
-    //-         ,
+         portico:{
+                 tittle: "PÓRTICO PEC 316",
+                 text: "Módulo Sanitizante - Uso Interior y Exterior",
+                 features: [
+                     {name: "6 micro aspersores nebulizadores.",
+                     icon: `iconList.png`},
+                     {name: "Tanque integrado de 10 lt de capacidad. (equivalente a 100 accionamientos)",
+                     icon: `iconList.png`},
+                     {name: "Alfombra antideslizante y sanitizante",
+                     icon: `iconList.png`},
+                     {name: "Sensor de movimiento y activación automática",
+                     icon: `iconList.png`},
+                     {name: "Bomba periférica de alta calidad.",
+                     icon: `iconList.png`},
+                     {name: "Instalación eléctrica con llave termo magnética.",
+                     icon: `iconList.png`},
+                    {name: "Protocolo de acceso de 3 pasos.",
+                     icon: `fas fa-circle`},
+                 ], 
+                 img: `ejemploPortico.jpg`,
+             }
+             ,
+         cabina:{
+             tittle: "CABINA PEC 318",
+             text: "Módulo Sanitizante - Uso Interior y Exterior",
+             features: [
+                 {name: "6 micro aspersores nebulizadores.",
+                 icon: `fas fa-circle`},
+                 {name: "Tanque integrado de 50 o 100lt de capacidad. (equivalente a 900 accionamientos)",
+                 icon: `fas fa-circle`},
+                 {name: "Alfombra antideslizante y sanitizante.",
+                 icon: `fas fa-circle`},
+                 {name: "Sensor de movimiento y activación automática.",
+                 icon: `fas fa-circle`},
+                 {name: "Bomba periférica de alta calidad.",
+                 icon: `fas fa-circle`},
+                 {name: "Instalación eléctrica con llave termo magnética.",
+                 icon: `fas fa-circle`},
+                 {name: "Indicadores de ingreso y egreso",
+                 icon: `fas fa-circle`},
+                 {name: "Iluminación Led interior",
+                 icon: `fas fa-circle`},
+                 {name: "Protocolo de acceso de 3 pasos",
+                 icon: `fas fa-circle`},
+             ],
+             img: `ejemploCabina.jpg`,
+             }
+             ,
     }
