--- a/pug/pages/index.pug
+++ b/pug/pages/index.pug
@@ -6,7 +6,7 @@ block append content
     section#nosotros.img-nosotros
         .container
             include nosotros.pug
-    section#modulos-sanitizantes.container
+    section#modulos-sanitizantes.container.my-3
         include modulos.pug
-    section#contacto.container
+    section#contacto.container.my-3
         include contacto.pug
