--- a/pug/includes/navbar.pug
+++ b/pug/includes/navbar.pug
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark black ">
     <div class="container">
         <a class="navbar-brand" href="index.html">
-            img(src="../img/svg/logo-pec-text.svg",height="60",alt="Constructora PEC")
+            img(src="img/svg/logo-pec-text.svg",height="60",alt="Constructora PEC")
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
