contenido del modal

--- a/pug/pages/modulos.pug
+++ b/pug/pages/modulos.pug
@@ -24,9 +24,11 @@
         
 .row
     
-    +card("Totem", "totemUso.png", desciption) 
-    +modal(contenidoModal.totem)
-    +card("Portico", "porticoUso.png", desciption) 
-    +modal(contenidoModal.portico)
-    +card("Cabina", "cabinaUso.png", desciption)
-    +modal(contenidoModal.cabina)
+    +card1("Totem", "totemUso.png", desciption) 
+    +modal1(contenidoModal.totem)
+    
+    +card2("Portico", "porticoUso.png", desciption) 
+    +modal2(contenidoModal.portico)
+    
+    +card3("Cabina", "cabinaUso.png", desciption)
+    +modal3(contenidoModal.cabina)
