--- a/pug/includes/mixins.pug
+++ b/pug/includes/mixins.pug
@@ -9,29 +9,72 @@ mixin getListado(objLista)
 
                 li.ml-2.my-3= obj.name 
 
-mixin modal(objModal)
-    <div class="modal fade" id="basicExampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+mixin modal1(obj)
+    <div class="modal fade" id="basicExampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    h5(class="modal-title")= obj.tittle
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    +contentModal(objModal.features)
+                    +contentModal(obj.features, obj.img)
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    
                 </div>
             </div>
         </div>
     </div>
 
-mixin card(title, image, description)
-    .col-12.col-sm-12.col-md-6.mb-4.d-flex.contenedor-card
+mixin modal2(obj)
+    <div class="modal fade" id="basicExampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    h5(class="modal-title")= obj.tittle
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    +contentModal(obj.features, obj.img)
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+
+mixin modal3(obj)
+    <div class="modal fade" id="basicExampleModal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel3" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    h5(class="modal-title")= obj.tittle
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    +contentModal(obj.features, obj.img)
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+mixin card1(title, image, description)
+    .col-12.col-sm-12.col-md-4.mb-4.d-flex.contenedor-card
         .card.align-items-center
             .card-header
                 h2.card-tittle= title
@@ -39,8 +82,34 @@ mixin card(title, image, description)
             .card-body
                 p.card-text= description
                 .contenedor-boton
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicExampleModal">Ver Mas</button>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicExampleModal1">Ver Mas</button>
 
-mixin contentModal(content)
+mixin card2(title, image, description)
+    .col-12.col-sm-12.col-md-4.mb-4.d-flex.contenedor-card
+        .card.align-items-center
+            .card-header
+                h2.card-tittle= title
+            img(src=`img/assets/${image}`, class="card-img-top img-fluid")
+            .card-body
+                p.card-text= description
+                .contenedor-boton
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicExampleModal2">Ver Mas</button>
+
+mixin card3(title, image, description)
+    .col-12.col-sm-12.col-md-4.mb-4.d-flex.contenedor-card
+        .card.align-items-center
+            .card-header
+                h2.card-tittle= title
+            img(src=`img/assets/${image}`, class="card-img-top img-fluid")
+            .card-body
+                p.card-text= description
+                .contenedor-boton
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicExampleModal3">Ver Mas</button>
+
+mixin contentModal(content, image)
     each c in content
-        p= c.name
+        ul.list-unstyled  
+            li= c.name
+    .imagen-modal
+        img(src= `img/assets/ejemplos/${image}`, alt="Imagen a modo Ilustrativo" class="img-fluid")
+
