--- a/pug/includes/mixins.pug
+++ b/pug/includes/mixins.pug
@@ -74,7 +74,7 @@ mixin modal3(obj)
 
 
 mixin card1(title, image, description)
-    .col-12.col-sm-12.col-md-4.mb-4.d-flex.contenedor-card
+    .col-12.col-sm-12.col-md-4.mb-4.d-flex.contenedor-card#totem
         .card.align-items-center
             .card-header
                 h2.card-tittle= title
